chore: add CI on windows

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
     - 'master'
+    - 'ci-windows'
     tags:
     - 'python-v*'
   schedule:
@@ -97,7 +98,7 @@ jobs:
     - name: Run Rust rz-pipe test
       run: |
         export PATH=${HOME}/bin:${HOME}/.local/bin:${PATH}
-        export LD_LIBRARY_PATH=${HOME}/lib/$(uname -m)-linux-gnu:${HOME}/lib:${HOME}/lib64:${LD_LIBRARY_PATH}
+        export LD_LIBR   ARY_PATH=${HOME}/lib/$(uname -m)-linux-gnu:${HOME}/lib:${HOME}/lib64:${LD_LIBRARY_PATH}
         export PKG_CONFIG_PATH=${HOME}/lib/pkgconfig:${HOME}/lib/$(uname -m)-linux-gnu/pkgconfig:${PKG_CONFIG_PATH}
         cargo build
       working-directory: rust
@@ -108,6 +109,86 @@ jobs:
         export LD_LIBRARY_PATH=${HOME}/lib/$(uname -m)-linux-gnu:${HOME}/lib:${HOME}/lib64:${LD_LIBRARY_PATH}
         export PKG_CONFIG_PATH=${HOME}/lib/pkgconfig:${HOME}/lib/$(uname -m)-linux-gnu/pkgconfig:${PKG_CONFIG_PATH}
         make
+      working-directory: ruby
+
+  build-windows:
+    name: Windows
+    runs-on: windows-latest
+    steps:
+    - uses: actions/checkout@v2
+    - uses: actions/setup-python@v2
+      with:
+        python-version: '3.8'
+    - name: Preparing msvc toolchain
+      uses: ilammy/msvc-dev-cmd@v1
+      with:
+        arch: x64
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install meson ninja PyYAML    
+    - name: Checkout rizin
+      uses: actions/checkout@v2
+      with:
+          repository: rizinorg/rizin
+          submodules: recursive
+          path: rizin
+    - name: Extract rizin version
+      shell: pwsh
+      run: echo "##[set-output name=branch;]$( python sys\\version.py )"
+      id: extract_version
+      working-directory: rizin
+    - name: Install rizin
+      shell: pwsh
+      run: |
+        dist\windows\vsdevenv.ps1 64
+        meson --buildtype=release --prefix="C:$env:HOMEPATH\AppData\Local\Programs\rizin\" build
+        ninja -C build
+        ninja -C build install
+      working-directory: rizin
+
+    - name: Run Python rz-pipe test
+      shell: pwsh
+      run: |
+        $env:PATH = "$env:PATH;C:$env:HOMEPATH\AppData\Local\Programs\rizin\bin"
+        python3 setup.py install --user
+        python3 -m pip install -r requirements-test.txt
+        python -m pytest -p no:cacheprovider tests/
+      working-directory: python
+
+    - uses: actions/setup-go@v2
+      with:
+          go-version: 1.15.x
+    - name: Run Go rz-pipe test
+      run: |
+        go test
+      working-directory: go
+      env:
+          GO111MODULE: on
+
+    - uses: ocaml/setup-ocaml@v2
+    - name: Run OCaml rz-pipe test
+      run: |
+        opam init
+        opam install -y .
+      working-directory: ocaml
+
+    - uses: ATiltedTree/setup-rust@v1
+      with:
+        rust-version: stable
+    - name: Run Rust rz-pipe test
+      run: |
+        cargo build
+      working-directory: rust
+
+    - uses: ruby/setup-ruby@v1
+      with:
+        ruby-version: 2.6 # Not needed with a .ruby-version file
+        bundler-cache: true # runs 'bundle install' and caches installed gems automatically
+    - name: Run Ruby rz-pipe test
+      run: |
+        ruby rzpipe.rb
+        cd examples ; ruby test.rb
       working-directory: ruby
 
   rust-fmt-clippy:
